@@ -2,6 +2,7 @@
 
 deb http://test/debian sid main
 deb http://test/debian testing main
+deb http://test/debian testing main
 deb     http://security.debian.org/ stable/updates main contrib non-free
 deb     http://www.toastfreeware.priv.at/debian stable/
 deb     http://www.kiberpipa.org/~minmax/cinelerra/builds/sid/ ./
