@@ -4,6 +4,8 @@ dh-make-perl (0.66) UNRELEASED; urgency=low
     --intrusive is given
   * AptContents/find_file_packages: strip the full section off the package name
     Closes RT#56100. Thanks to Nicolas Mendoza
+  * AptContents: avoid scanning the same Contents file multiple times. Thanks
+    to Nicolas Mendoza
 
  -- Damyan Ivanov <dmn@debian.org>  Tue, 09 Mar 2010 08:46:09 +0200
 
